polish generale, fix scrollbar, remade portfolio

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,6 +12,9 @@ html{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    
+    
 }
 
 
@@ -20,7 +23,7 @@ html{
     margin: 0;
     box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
-    // cursor: none;
+    cursor: none;
 }
 
 body{
@@ -39,7 +42,7 @@ a{
 }
 
 section{
-    height: 100vh;
+    
     scroll-snap-align: center;
 }
 
