--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -5,9 +5,7 @@
     width: 100%;
     overflow: hidden;
     background: linear-gradient(180deg, #0c0c1d, #111132);
-    position: absolute;
-    top: 0;
-    left: 0;
+
 
 
     .wrapper{
