--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,8 +1,8 @@
 @import "../../app.scss";
 
 .services{
-    background: linear-gradient(180deg, #0c0c1d, #111132);
-    height: 100%;
+    background: linear-gradient(180deg, #111132, #0c0c1d);
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
